--- a/style.css
+++ b/style.css
@@ -31,10 +31,6 @@ nav {
 	height: 100px;
 }
 
-/* 		nav a {
-	text-decoration: none;
-	color: inherit;
-} */
 
 .title-info {
 	font-size: 48px;
@@ -48,7 +44,7 @@ nav {
 	margin-top: 0.7em;
 }
 
-/* 		nav ul {
+nav ul {
 	margin-top: 0;
 	width: 900px;
 	margin-left: auto;
@@ -59,15 +55,22 @@ nav {
 	-ms-transform: translateY(-50%);
 	position: relative;
 	display: block;
+	text-align: center;
 }
 
 nav li {
 	list-style: none;
-	display: inline-block;
-	padding: 0;
-	width: 170px;
-	text-align: center;
-} */
+	display: inline;
+	padding: 18px;
+	font-size: 24px;
+}
+
+
+nav a {
+	text-decoration: none;
+	color: inherit;
+}
+
 
 .menu {
 	/* background-color: purple; */
